--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 /* style.css */
 
+body {
+  background-color: rgb(245, 228, 207);
+}
+
 #game {
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
   height: 400px;
   border: 2px solid #000;
+  padding: 20px;
   margin: 20px auto;
   width: 80%;
 }
@@ -17,7 +22,19 @@
   position: relative;
 }
 
+
 .ring {
+  height: 20px;
+  background-color: #ffcc00;
+  border: 2px solid #000;
+  border-radius: 5px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: var(--RING_BOTTOM);
+   width: var(--RING_WIDTH);
+}
+/* .ring {
   height: 15px;
   width: var(--RING_WIDTH);
   bottom: var(--RING_BOTTOM);
@@ -27,8 +44,8 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-}
+} */
 
-.selected{
-    background-color: red;
+.selected {
+  background-color: red;
 }
