--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
   position: relative;
 }
 
-
 .ring {
   height: 20px;
   background-color: #ffcc00;
@@ -32,7 +31,24 @@ body {
   left: 50%;
   transform: translateX(-50%);
   bottom: var(--RING_BOTTOM);
-   width: var(--RING_WIDTH);
+  width: var(--RING_WIDTH);
+}
+
+button {
+  background-color: teal;
+  color: aliceblue;
+  text-transform: capitalize;
+  font-size: medium;
+  font-weight: 400;
+  padding: 0.3em;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: black 2px outset;
+}
+button:hover {
+  background-color: rgb(240, 129, 129);
+  box-shadow: 2px 2px 2px 2px #888888;
 }
 /* .ring {
   height: 15px;
